--- a/src/main/resources/zres/fx_layout/mainscene/main_scene.fxml
+++ b/src/main/resources/zres/fx_layout/mainscene/main_scene.fxml
@@ -16,10 +16,37 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox id="MainStage" fx:id="MainPane" prefHeight="520.0" prefWidth="811.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jemylibs.uilib.windows.MainView">
+<VBox id="MainStage" fx:id="MainPane" prefHeight="520.0" prefWidth="811.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jemylibs.uilib.windows.MainView">
     <AnchorPane id="header" VBox.vgrow="NEVER">
         <HBox AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" HBox.hgrow="ALWAYS">
             <children>
+              <HBox>
+                  <Label id="app-title" fx:id="app_title" text="برنامج الحسابات" HBox.hgrow="ALWAYS">
+                      <padding>
+                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                      </padding>
+                  </Label>
+                  <HBox fx:id="header_buttons" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" spacing="10.0" styleClass="header-buttons">
+      
+                      <Button text="إعادة تحميل" />
+                      <padding>
+                          <Insets left="10.0" right="10.0" />
+                      </padding>
+                  </HBox>
+      
+                  <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" spacing="10.0" styleClass="header-buttons">
+                      <ProgressBar fx:id="progressBar" maxHeight="15.0" minHeight="15.0" prefHeight="15.0" progress="0.47">
+                     <HBox.margin>
+                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                     </HBox.margin>
+                  </ProgressBar>
+                      <padding>
+                          <Insets left="10.0" right="10.0" />
+                      </padding>
+                  </HBox>
+      
+      
+              </HBox>
                 <MenuBar fx:id="MenuBar" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" nodeOrientation="RIGHT_TO_LEFT" styleClass="jfx-rippler" HBox.hgrow="ALWAYS">
                     <Menu mnemonicParsing="false" text="Unspecified Menu">
                         <MenuItem mnemonicParsing="false" text="Action 1" />
@@ -50,23 +77,6 @@
                         <Image url="@../../images/Icons/notification.png" />
                     </image>
                 </ImageView>
-            </children>
-        </HBox>
-        <HBox>
-            <children>
-                <Label id="app-title" fx:id="app_title" text="برنامج الحسابات" HBox.hgrow="ALWAYS">
-                    <padding>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                    </padding>
-                </Label>
-                <HBox fx:id="header_buttons" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" spacing="10.0" styleClass="header-buttons">
-
-                    <Button text="إعادة تحميل" />
-                    <ProgressBar fx:id="progressBar" maxHeight="15.0" minHeight="15.0" prefHeight="15.0" progress="0.47" />
-                    <padding>
-                        <Insets left="10.0" right="10.0" />
-                    </padding>
-                </HBox>
             </children>
         </HBox>
     </AnchorPane>
