--- a/src/main/resources/zres/fx_layout/templates/table_manager.fxml
+++ b/src/main/resources/zres/fx_layout/templates/table_manager.fxml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jemylibs.uilib.ctrls.ManageBox?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.TableView?>
+<?import com.jemylibs.uilib.ctrls.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<VBox xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.jemylibs.uilib.view.templates.EntityTable.TableManager">
+
+<VBox xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jemylibs.uilib.view.templates.EntityTable.TableManager">
     <HBox alignment="CENTER_LEFT" VBox.vgrow="NEVER">
-        <ManageBox fx:id="manage_box" fillHeight="false" maxHeight="-Infinity" maxWidth="-Infinity"
-                   minHeight="-Infinity" minWidth="-Infinity">
+        <ManageBox fx:id="manage_box" fillHeight="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity">
             <padding>
-                <Insets bottom="1.0" left="1.0" right="1.0" top="1.0"/>
+                <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
             </padding>
         </ManageBox>
         <HBox fx:id="controlsBox" alignment="CENTER">
         </HBox>
         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
         </padding>
     </HBox>
-    <TableView fx:id="table" VBox.vgrow="ALWAYS"/>
+    <TableView fx:id="table" VBox.vgrow="ALWAYS" />
 </VBox>
