--- a/src/main/resources/zres/fx_layout/mainscene/main_scene.fxml
+++ b/src/main/resources/zres/fx_layout/mainscene/main_scene.fxml
@@ -1,52 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import java.net.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<VBox id="MainStage" fx:id="MainPane" prefHeight="520.0" prefWidth="811.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jemylibs.uilib.windows.MainView">
+<VBox id="MainStage" fx:id="MainPane" prefHeight="520.0" prefWidth="811.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jemylibs.uilib.windows.MainView">
     <AnchorPane id="header" VBox.vgrow="NEVER">
         <HBox AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" HBox.hgrow="ALWAYS">
             <children>
-              <HBox>
-                  <Label id="app-title" fx:id="app_title" text="برنامج الحسابات" HBox.hgrow="ALWAYS">
-                      <padding>
-                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                      </padding>
-                  </Label>
-                  <HBox fx:id="header_buttons" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" spacing="10.0" styleClass="header-buttons">
-      
-                      <Button text="إعادة تحميل" />
-                      <padding>
-                          <Insets left="10.0" right="10.0" />
-                      </padding>
-                  </HBox>
-      
-                  <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" spacing="10.0" styleClass="header-buttons">
-                      <ProgressBar fx:id="progressBar" maxHeight="15.0" minHeight="15.0" prefHeight="15.0" progress="0.47">
-                     <HBox.margin>
-                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-                     </HBox.margin>
-                  </ProgressBar>
-                      <padding>
-                          <Insets left="10.0" right="10.0" />
-                      </padding>
-                  </HBox>
-      
-      
-              </HBox>
+                <HBox>
+                    <Label id="app-title" fx:id="app_title" text="برنامج الحسابات" HBox.hgrow="ALWAYS">
+                        <padding>
+                            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                        </padding>
+                    </Label>
+                    <HBox fx:id="header_buttons" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" spacing="10.0" styleClass="header-buttons">
+
+                        <Button text="إعادة تحميل" />
+                        <padding>
+                            <Insets left="10.0" right="10.0" />
+                        </padding>
+                    </HBox>
+
+                    <HBox fx:id="progressBarView" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" spacing="10.0" styleClass="header-buttons">
+                        <ProgressBar fx:id="progressBar" maxHeight="15.0" minHeight="15.0" prefHeight="15.0" progress="0.87">
+                            <HBox.margin>
+                                <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                            </HBox.margin>
+                        </ProgressBar>
+                        <padding>
+                            <Insets left="10.0" right="10.0" />
+                        </padding>
+                    </HBox>
+                </HBox>
                 <MenuBar fx:id="MenuBar" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" nodeOrientation="RIGHT_TO_LEFT" styleClass="jfx-rippler" HBox.hgrow="ALWAYS">
                     <Menu mnemonicParsing="false" text="Unspecified Menu">
                         <MenuItem mnemonicParsing="false" text="Action 1" />
@@ -86,12 +74,12 @@
             <Tab text="Untitled Tab" />
         </tabs>
     </TabPane>
-   <stylesheets>
-      <URL value="@../../styles/main_scene.css" />
-      <URL value="@../../styles/general.css" />
-      <URL value="@../../styles/custom_controls.css" />
-      <URL value="@../../styles/z_item_view.css" />
-      <URL value="@../../styles/tabs.css" />
-      <URL value="@../../styles/tables.css" />
-   </stylesheets>
+    <stylesheets>
+        <URL value="@../../styles/main_scene.css" />
+        <URL value="@../../styles/general.css" />
+        <URL value="@../../styles/custom_controls.css" />
+        <URL value="@../../styles/z_item_view.css" />
+        <URL value="@../../styles/tabs.css" />
+        <URL value="@../../styles/tables.css" />
+    </stylesheets>
 </VBox>
