--- a/src/main/resources/zres/styles/tables.css
+++ b/src/main/resources/zres/styles/tables.css
@@ -18,7 +18,7 @@
 .table-cell {
     -fx-padding: 8 5 5 5;
     -fx-border-width: 0;
-    -fx-alignment: CENTER-RIGHT;
+    -fx-alignment: CENTER-LEFT;
 }
 
 .column-header .label {
