--- a/src/main/resources/zres/styles/tabs.css
+++ b/src/main/resources/zres/styles/tabs.css
@@ -32,12 +32,14 @@
 .tab-pane .tab {
     -fx-padding: 0 10 0 4;
     -fx-pref-height: 30;
-    -fx-background-color: #fff;
-    -fx-background-radius: 5;
-    -fx-border-radius: 4;
+    -fx-background-radius: 2;
+    -fx-border-radius: 2;
     -fx-border-insets: 0 3 0 0;
     -fx-border-width: 0 0 3 0 !important;
     -fx-border-color: #f5f5f5;
+    -fx-text-fill: white;
+    -fx-background-color: linear-gradient(#ffffff, #e9e9e9, #ffffff) !important;
+
 }
 
 .tab-pane .tab:hover {
@@ -46,20 +48,21 @@
 }
 
 .tab-pane .tab:selected {
-    -fx-background-color: base-1;
     -fx-border-width: 0 0 3 0 !important;
-    -fx-border-color: #272727;
+    -fx-border-color: #000000;
+    -fx-background-color: linear-gradient(#222, #333, #222) !important;
+
 }
 
 .tab-pane .tab .tab-label {
     -fx-font-size: 15px;
     -fx-alignment: CENTER;
-    -fx-text-fill: #333;
+    -fx-text-fill: #000;
     -fx-padding: 0 8 0 8;
 }
 
 .tab-pane .tab:selected .tab-label {
-    -fx-text-fill: #000;
+    -fx-text-fill: #fff;
 }
 
 .tab .tab-close-button {
