--- a/src/main/resources/zres/fx_layout/alerts/toast.fxml
+++ b/src/main/resources/zres/fx_layout/alerts/toast.fxml
@@ -1,46 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?><?import javafx.scene.control.Button?><?import javafx.scene.control.Label?><?import javafx.scene.layout.BorderPane?><?import javafx.scene.layout.HBox?><?import javafx.scene.text.Font?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" styleClass="toast-view" stylesheets="@toast.css"
-    xmlns="http://javafx.com/javafx/8.0.171"
-    fx:controller="com.jemylibs.uilib.utilities.alert.Toast">
+            xmlns="http://javafx.com/javafx/8.0.171"
+            fx:controller="com.jemylibs.uilib.utilities.alert.Toast">
     <top>
         <HBox BorderPane.alignment="CENTER" alignment="CENTER" nodeOrientation="RIGHT_TO_LEFT"
-            spacing="5.0">
+              spacing="5.0">
             <Button maxHeight="52.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0"
-                mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0"
-                styleClass="toast-close-button" text="x" fx:id="close_but" />
+                    mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0"
+                    styleClass="toast-close-button" text="x" fx:id="close_but"/>
             <Label HBox.hgrow="ALWAYS" maxHeight="-Infinity" maxWidth="1.7976931348623157E308"
-                styleClass="toast-title" text="تسجيل قيود النقدية" fx:id="title_label">
+                   styleClass="toast-title" text="تسجيل قيود النقدية" fx:id="title_label">
                 <font>
-                    <Font size="14.0" />
+                    <Font size="14.0"/>
                 </font>
                 <padding>
-                    <Insets bottom="2.0" left="10.0" right="10.0" top="2.0" />
-                </padding>
-            </Label>
-            <Label styleClass="toast-type-label" text="خطأ" textFill="WHITE" fx:id="type_label">
-                <font>
-                    <Font size="14.0" />
-                </font>
-                <padding>
-                    <Insets bottom="3.0" left="10.0" right="10.0" top="3.0" />
+                    <Insets bottom="2.0" left="10.0" right="10.0" top="2.0"/>
                 </padding>
             </Label>
         </HBox>
     </top>
     <padding>
-        <Insets bottom="6.0" left="6.0" right="6.0" top="6.0" />
+        <Insets bottom="6.0" left="6.0" right="6.0" top="6.0"/>
     </padding>
     <center>
         <Label BorderPane.alignment="CENTER" alignment="CENTER" maxHeight="200.0" maxWidth="450.0"
-            minHeight="70.0" minWidth="-Infinity" prefWidth="300.0" styleClass="Content"
-            text="مل يبلى نمىمى" textAlignment="RIGHT" wrapText="true" fx:id="content_label">
+               minHeight="70.0" minWidth="-Infinity" prefWidth="300.0" styleClass="Content"
+               text="مل يبلى نمىمى" textAlignment="RIGHT" wrapText="true" fx:id="content_label">
             <padding>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </padding>
             <font>
-                <Font size="15.0" />
+                <Font size="15.0"/>
             </font>
         </Label>
     </center>
