--- a/src/main/resources/zres/fx_layout/alerts/toast.fxml
+++ b/src/main/resources/zres/fx_layout/alerts/toast.fxml
@@ -9,13 +9,13 @@
             xmlns="http://javafx.com/javafx/8.0.171"
             fx:controller="com.jemylibs.uilib.utilities.alert.Toast">
     <top>
-        <HBox BorderPane.alignment="CENTER" alignment="CENTER" nodeOrientation="RIGHT_TO_LEFT"
+        <HBox BorderPane.alignment="CENTER" alignment="CENTER"
               spacing="5.0">
             <Button maxHeight="52.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0"
                     mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0"
                     styleClass="toast-close-button" text="x" fx:id="close_but"/>
             <Label HBox.hgrow="ALWAYS" maxHeight="-Infinity" maxWidth="1.7976931348623157E308"
-                   styleClass="toast-title" text="تسجيل قيود النقدية" fx:id="title_label">
+                   styleClass="toast-title" text="Process Name" fx:id="title_label">
                 <font>
                     <Font size="14.0"/>
                 </font>
@@ -31,7 +31,7 @@
     <center>
         <Label BorderPane.alignment="CENTER" alignment="CENTER" maxHeight="200.0" maxWidth="450.0"
                minHeight="70.0" minWidth="-Infinity" prefWidth="300.0" styleClass="Content"
-               text="مل يبلى نمىمى" textAlignment="RIGHT" wrapText="true" fx:id="content_label">
+               text="Text Message." textAlignment="RIGHT" wrapText="true" fx:id="content_label">
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </padding>
