--- a/src/main/resources/zres/fx_layout/finance/recorder/account_entries_viewer.fxml
+++ b/src/main/resources/zres/fx_layout/finance/recorder/account_entries_viewer.fxml
@@ -6,16 +6,16 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.VBox?>
-
-<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jemylibs.uilib.view.templates.EntityTable.AccountEntriesViewer">
+<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.jemylibs.uilib.view.templates.EntityTable.AccountEntriesViewer">
     <Label fx:id="title" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="NEVER">
         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
         </padding>
     </Label>
-    <FlowPane fx:id="otherControls" />
-    <SplitPane dividerPositions="0.25298804780876494" nodeOrientation="RIGHT_TO_LEFT" VBox.vgrow="ALWAYS">
-        <TableView fx:id="mainTableView" />
-        <TableView fx:id="subTableView" />
+    <FlowPane fx:id="otherControls"/>
+    <SplitPane dividerPositions="0.25298804780876494" VBox.vgrow="ALWAYS">
+        <TableView fx:id="mainTableView"/>
+        <TableView fx:id="subTableView"/>
     </SplitPane>
 </VBox>
