--- a/src/main/resources/zres/fx_layout/html_components_selector.fxml
+++ b/src/main/resources/zres/fx_layout/html_components_selector.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<VBox nodeOrientation="RIGHT_TO_LEFT" prefHeight="395.0" prefWidth="535.0" spacing="10.0"
+<VBox prefHeight="395.0" prefWidth="535.0" spacing="10.0"
       xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.jemylibs.uilib.html.HtmlComponentsSelector">
     <padding>
