--- a/src/main/resources/zres/fx_layout/alerts/toast.css
+++ b/src/main/resources/zres/fx_layout/alerts/toast.css
@@ -1,46 +1,48 @@
 
-.type-fine{
-    -fx-type-color: rgba(0,70,150,.9) !important;
-    -fx-type-fill:  rgba(0,30,120,1);
-}
-.type-error{
-    -fx-type-color: rgba(230,00,40,.9) !important;
-    -fx-type-fill:  rgba(120,0,30,1);
+.type-fine {
+    -fx-type-color: rgba(255, 151, 0, 0.9) !important;
 }
 
-.toast-view{
+.type-error {
+    -fx-type-color: rgb(230, 67, 84) !important;
+}
+
+.toast-view {
     -fx-padding: 5;
-    -fx-background-radius: 5;
-    -fx-border-radius:5;
-    -fx-border-width: 1;
-    -fx-border-color: rgba(255,255,255,.0)!important;
-    -fx-background-color:-fx-type-color;
+    -fx-background-radius: 6;
+    -fx-border-radius: 6;
+    -fx-border-width: 3;
+    -fx-border-color: rgba(0, 0, 0, 0.78) !important;
+    -fx-background-color: -fx-type-color;
+    -fx-text-fill: ladder(rgb(30, 30, 30), white, black);
 }
 
-.toast-view:hover{
-    -fx-border-color: rgba(33,33,33,.4)!important;
+.toast-view:hover {
+    -fx-border-color: rgba(33, 33, 33, .4) !important;
 }
 
-.toast-close-button{
-    -fx-padding: 1 3 1 3;
-    -fx-background-radius: 30;
-    -fx-background-color:rgb(30,30,30)!important;
+.toast-close-button {
+    -fx-base:#333 !important;
+    -fx-background-radius: 50;
+    -fx-border-radius: 50;
+    -fx-padding: 2 0 2 0;
+}
+
+.toast-close-button:hover {
+    -fx-background-color: rgb(200, 9, 65) !important;
     -fx-text-fill: #fff;
 }
- .toast-close-button:hover{
-    -fx-background-color:rgb(200,150,140)!important;
-    -fx-text-fill: #fff;
-}
 
-.toast-title{
-    -fx-background-color: rgba(0,0,0,.6)!important;
+.toast-title {
+    -fx-background-color: rgba(255, 255, 255, 0.8) !important;
     -fx-background-radius: 5;
-    -fx-border-radius:5;
+    -fx-border-radius: 5;
+    -fx-text-fill: ladder(rgba(255, 255, 255, 0.8), white, black);
 }
 
-.toast-type-label{
-    -fx-background-color: rgba(255,255,255,.9)!important;
+.toast-type-label {
+    -fx-background-color: rgba(255, 255, 255, .9) !important;
     -fx-background-radius: 5;
     -fx-text-fill: -fx-type-fill;
-    -fx-border-radius:5;
+    -fx-border-radius: 5;
 }
