--- a/src/main/resources/zres/fx_layout/alerts/toast.fxml
+++ b/src/main/resources/zres/fx_layout/alerts/toast.fxml
@@ -1,43 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" styleClass="toast-view" stylesheets="@toast.css"
-            xmlns="http://javafx.com/javafx/8.0.171"
-            fx:controller="com.jemylibs.uilib.utilities.alert.Toast">
+<?import javafx.scene.text.*?>
+
+<BorderPane styleClass="toast-view" stylesheets="@toast.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jemylibs.uilib.utilities.alert.Toast">
     <top>
-        <HBox BorderPane.alignment="CENTER" alignment="CENTER"
-              spacing="5.0">
-            <Button maxHeight="52.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0"
-                    mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0"
-                    styleClass="toast-close-button" text="x" fx:id="close_but"/>
-            <Label HBox.hgrow="ALWAYS" maxHeight="-Infinity" maxWidth="1.7976931348623157E308"
-                   styleClass="toast-title" text="Process Name" fx:id="title_label">
-                <font>
-                    <Font size="14.0"/>
-                </font>
+        <HBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
+            <Button fx:id="close_but" contentDisplay="CENTER" maxHeight="52.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" styleClass="toast-close-button" />
+            <Label fx:id="title_label" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" styleClass="toast-title" text="Process Name" HBox.hgrow="ALWAYS">
                 <padding>
-                    <Insets bottom="2.0" left="10.0" right="10.0" top="2.0"/>
+                    <Insets bottom="2.0" left="10.0" right="10.0" top="2.0" />
                 </padding>
             </Label>
         </HBox>
     </top>
     <padding>
-        <Insets bottom="6.0" left="6.0" right="6.0" top="6.0"/>
+        <Insets bottom="6.0" left="6.0" right="6.0" top="6.0" />
     </padding>
     <center>
-        <Label BorderPane.alignment="CENTER" alignment="CENTER" maxHeight="200.0" maxWidth="450.0"
-               minHeight="70.0" minWidth="-Infinity" prefWidth="300.0" styleClass="Content"
-               text="Text Message." textAlignment="RIGHT" wrapText="true" fx:id="content_label">
+        <Label fx:id="content_label" alignment="CENTER" maxHeight="300.0" maxWidth="600.0" minWidth="-Infinity" prefWidth="250.0" styleClass="Content" text="Text Message." textAlignment="RIGHT" wrapText="true" BorderPane.alignment="CENTER">
             <padding>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
-            <font>
-                <Font size="15.0"/>
-            </font>
+         <font>
+            <Font size="13.0" />
+         </font>
         </Label>
     </center>
 </BorderPane>
