--- a/src/main/resources/zres/styles/general.css
+++ b/src/main/resources/zres/styles/general.css
@@ -38,11 +38,10 @@ Author: Ahmed Gamal
 .choice-box, .button, .text-field, .combo-box, .menu-button {
     -fx-base: base-5;
     -fx-text-fill: base-fill-5;
-    -fx-border-width: 1;
     -fx-border-color: base-3;
     -fx-background-insets: 1;
-    -fx-border-radius: 10;
-    -fx-background-radius: 10;
+    -fx-border-radius: 8;
+    -fx-background-radius: 8;
 }
 
 .text-field {
@@ -140,10 +139,6 @@ Author: Ahmed Gamal
     -fx-padding: 4 10 4 10;
 }
 
-.button {
-    -fx-font-size: 14;
-}
-
 /**
 *
 *
@@ -213,40 +208,42 @@ tooltip*/
 
 
 /*Project HR*/
-.activitiesContent .table-view:focused {
-    -fx-background-insets: 0;
-    -fx-background-radius: 0;
-    -fx-padding: 0;
-}
+/*.activitiesContent .table-view:focused {*/
+/*    -fx-background-insets: 0;*/
+/*    -fx-background-radius: 0;*/
+/*    -fx-padding: 0;*/
+/*}*/
 
-#sssaaa .z-item-view {
-    -fx-padding: 2;
-    -fx-background-radius: 0;
-    -fx-border-radius: 0;
-    -fx-border-width: 0;
-}
+/*#sssaaa .z-item-view {*/
+/*    -fx-padding: 2;*/
+/*    -fx-background-radius: 0;*/
+/*    -fx-border-radius: 0;*/
+/*    -fx-border-width: 0;*/
+/*}*/
 
-#sssaaa {
-    -fx-padding: 2;
-    -fx-background-radius: 5;
-    -fx-border-radius: 5;
-    -fx-background-color: #484848;
-    -fx-border-width: 3 0 3 0;
-    -fx-border-color: #ff1e45;
-}
+/*#sssaaa {*/
+/*    -fx-padding: 2;*/
+/*    -fx-background-radius: 5;*/
+/*    -fx-border-radius: 5;*/
+/*    -fx-background-color: #484848;*/
+/*    -fx-border-width: 3 0 3 0;*/
+/*    -fx-border-color: #ff1e45;*/
+/*}*/
 
-#lalal {
-    -fx-background-radius: 2;
-    -fx-padding: 5 50 5 50;
-    -fx-border-width: 0 0 2 0;
-    /*-fx-border-color: #47bcf8;*/
-    -fx-text-fill: white;
-    /*-fx-effect: dropshadow(three-pass-box, #31caee, 2, 0.0, 0, 0);*/
-    -fx-border-radius: 2;
-}
+/*#lalal {*/
+/*    -fx-background-radius: 2;*/
+/*    -fx-padding: 5 50 5 50;*/
+/*    -fx-border-width: 0 0 2 0;*/
+/*    !*-fx-border-color: #47bcf8;*!*/
+/*    -fx-text-fill: white;*/
+/*    !*-fx-effect: dropshadow(three-pass-box, #31caee, 2, 0.0, 0, 0);*!*/
+/*    -fx-border-radius: 2;*/
+/*}*/
 
 .button {
-    -fx-padding: 2 8 2 8;
-    -fx-base: rgba(55, 99, 255, 0.87) !important;
-    -fx-text-fill: #e6e6e6 !important;
+    -fx-base: rgb(35, 157, 255) !important;
+    -fx-text-fill: ladder(-fx-base, white 70%, black 50%);
+    -fx-border-color: derive(-fx-base, 50%);
+    -fx-border-width: 2;
+    -fx-padding: 3 8 3 8;
 }
