--- a/src/main/resources/zres/styles/tabs.css
+++ b/src/main/resources/zres/styles/tabs.css
@@ -12,14 +12,13 @@
 
 .tab-section:hover {
     -fx-border-color: rgba(200, 200, 255, 1);
-
 }
 
 .tab-pane:focused > .tab-header-area > .headers-region > .tab:selected .focus-indicator {
     -fx-border-width: 0;
 }
 
-.tab-pane .tab-header-area, .tab-pane .tab-header-area .tab-header-background {
+.main-view-tab-pane .tab-header-area, .main-view-tab-pane .tab-header-area .tab-header-background {
     -fx-padding: 0 0 0 0;
     -fx-background-radius: 5 5 5 5;
     -fx-background-color: rgb(255, 255, 255);
@@ -29,54 +28,56 @@
     /*-fx-border-color: #7a7a7a;*/
 }
 
-.tab-pane .tab {
+.main-view-tab-pane .tab {
     -fx-padding: 0 10 0 4;
     -fx-pref-height: 30;
     -fx-background-radius: 2;
-    -fx-border-radius: 2;
-    -fx-border-insets: 0 3 0 0;
+    -fx-border-radius: 0;
+    -fx-border-insets: 0 2 0 0;
     -fx-border-width: 0 0 3 0 !important;
     -fx-border-color: #f5f5f5;
     -fx-text-fill: white;
     -fx-background-color: linear-gradient(#ffffff, #e9e9e9, #ffffff) !important;
-
 }
 
-.tab-pane .tab:hover {
+.main-view-tab-pane .tab:hover {
     -fx-background-color: base-3;
-    -fx-border-color: #828282;
+    -fx-border-color: #00cdff;
 }
 
-.tab-pane .tab:selected {
+.main-view-tab-pane .tab:selected {
     -fx-border-width: 0 0 3 0 !important;
-    -fx-border-color: #000000;
-    -fx-background-color: linear-gradient(#222, #333, #222) !important;
-
+    -fx-border-color: #050f1d;
+    -fx-background-color: linear-gradient(#00cdff, #00cdff) !important;
 }
 
-.tab-pane .tab .tab-label {
+.tab-pane.main-view-tab-pane .tab .tab-label {
     -fx-font-size: 15px;
     -fx-alignment: CENTER;
     -fx-text-fill: #000;
     -fx-padding: 0 8 0 8;
 }
 
-.tab-pane .tab:selected .tab-label {
+.tab-pane.main-view-tab-pane .tab:selected .tab-label {
     -fx-text-fill: #fff;
 }
 
-.tab .tab-close-button {
+.tab-pane.main-view-tab-pane .tab .tab-close-button {
     -fx-scale-shape: circle;
     -fx-background-insets: -1;
     -fx-background-color: #333;
 }
 
-/*.tab:selected .tab-close-button {*/
-/*    -fx-background-color: #fff;*/
-/*}*/
+.tab-pane.main-view-tab-pane .tab:selected .tab-close-button {
+    -fx-background-color: rgba(238, 238, 238, 0.7);
+}
 
-
-.tab .tab-close-button:hover {
+.tab-pane.main-view-tab-pane .tab .tab-close-button:hover {
     -fx-background-color: rgba(255, 16, 53, 0.7);
     -fx-background-insets: -2;
+}
+
+.tab-pane .con{
+    -fx-background-color: black;
+
 }
